tests/integration/snapshots/integration__conformance__n_number_1ee2.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[1eE2]
stdout ---

stderr ---
error: expected +/- or digit after exponent indicator, found `E`
 --> stdin:1:4
  |
1 | [1eE2]
  |   -^
  |   |
  |   exponent found here
